# SOLANO-PACANELE.github.io

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  anchor-deploy  anchor-test  build.sh  deploy_devnet.sh  docker_build.sh  docker_shell.sh  docker_start.sh  install.sh  install.txt  readme.md  solana  solana.sh  solana_id.json  start_docker.sh
.github/workflows/: publish_pages.yaml
.github_pages/: 404.html  index.html
.github_pages/assets/: .gitignore  convert_img1.sh  convert_img2.sh  main-7afc58753a244d5a.css
.github_pages/wasm/: web_pacanele.d.ts  web_pacanele.d.ts.br  web_pacanele.js  web_pacanele.js.br  web_pacanele_bg.wasm  web_pacanele_bg.wasm.br  web_pacanele_bg.wasm.d.ts  web_pacanele_bg.wasm.d.ts.br
.github_pages/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
docker/: Dockerfile  Dockerfile.base  Dockerfile.contract  entrypoint.sh
frontend/: release.sh  serve.sh
frontend/.cargo/: config.toml
frontend/web_pacanele/: Cargo.toml  Dioxus.toml  README.md
frontend/web_pacanele/assets/: convert_img2.sh  main.css
frontend/web_pacanele/src/: audio.rs  audio_tracks.rs  client.rs  fruit_list.rs  fruits.txt  gen_css.rs  lib.rs  main.rs  pacanele.rs  random.rs  state.rs  time.rs  wallet.rs
pacanele/: .gitignore  Anchor.toml
pacanele/programs/pacanele/: Cargo.toml
pacanele/programs/pacanele/src/: lib.rs
pacanele/tests/: Cargo.toml
pacanele/tests/src/: test_initialize.rs
pacanele2/: Cargo.toml  program_address.txt  readme.md
pacanele2/examples/: client.rs
pacanele2/src/: lib.rs
pacanele2_client/: Cargo.toml
pacanele2_client/examples/: main.rs
pacanele2_client/src/: lib.rs
program_pacanele/: Cargo.toml
program_pacanele/src/: lib.rs
rules/: Cargo.toml  build.rs  generate.sh
rules/src/: fruits.txt  lib.rs  main.rs  rule_set.rs
rules/src/generated_rules/: mod.rs  p96.rs
web_pacanele/: Cargo.toml
