[package]
name = "pacanele2"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]

[[example]]
name = "client"
path = "examples/client.rs"


[dependencies]
solana-program = "2.1.6"

[dev-dependencies]
solana-program-test = "2.1.6"
solana-sdk = "2.1.6"
solana-client = "2.1.6"
tokio = "1.42.0"
# openssl = { version = "0.10", features = ["vendored"] }
