[package]
name = "pacanele2"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
solana-program = "2.1.7"
rules = {path = "../rules", default-features = false, features = ["constructors"]}
bincode = "1.3.3"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
solana-program-test = "2.1.7"
solana-sdk = "2.1.7"
solana-client = "2.1.7"
tokio = "1.43.0"
solana-transaction-status-client-types = "2.1.7"
