[package]
name = "pacanele2_client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1.7"
# solana-client = "2.1.7"
# solana-transaction-status-client-types = "2.1.7"
async-std = "1.13.0"
# solana-client-wasm = "1.18.0"
# solana-extra-wasm = "1.18.0"
# solana-sdk = "=1.18.7"
wasm_client_solana = { version = "0.7" }
base64 = "0.22.1"
tracing = "0.1.41"

[dev-dependencies]
tokio = "1.43.0"

[features]
default_features = []
js = ["wasm_client_solana/js"]
