[package]
name = "rules"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = {version="0.8.5", optional = true}
# borsh = { version = "1.5.3", features = ["derive"] }
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

[features]
default_features = ["generate", "constructors"]
generate = ["dep:rand"]
constructors = []
