[package]
name = "web_pacanele"
version = "0.1.0"
authors = ["johnny-smitherson <127537716+johnny-smitherson@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
dioxus-logger = "0.6.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.20.2"
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"], optional = true }
dioxus-sdk = {version = "0.6.0", optional = true}
async-std = {version = "1.13.0"}
web-time = "1.1.0"
web-sys = {version="0.3.76", features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
]}

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio"]
